# anime-matrix

./: Cargo.toml
src/: main.rs  matrix.rs  server.rs
templates/: hello.html.tera
web/: index.html  web.js
