[package]
name = "anime"
version = "0.1.0"
authors = ["Marcus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.6"

rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
serde = { version = "1.0", features = ["derive"] }
